--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: cambira, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 .pictures{
     display: flex;
