--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 *{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria, sans-serif;
 }
 .pictures{
     display: flex;
+}
+.header_icons{
+    display: grid;
+    margin: 2rem auto 2rem auto;
+    width: 1000px;
 }
 
 
