added flex box in projects & changed fonts

--- a/style.css
+++ b/style.css
@@ -1,18 +1,69 @@
 *{
+    border-width: 1px;
     font-family: Cambria, sans-serif;
 }
-.pictures{
+
+.header_title{
+    margin-top: 40px;
+    margin-bottom: -40px;
     display: flex;
-}
-.header_icons{
-    display: grid;
-    margin: 2rem auto 2rem auto;
-    width: 1000px;
+    justify-content: center;
+   text-align: center;
 }
 
+.nav__icon{
+    margin: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+}
 
+.bio__header{
+    margin: 50px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 
+.bio{
+    text-align: center;
+}
 
+.virtual_crab{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.hospital{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.pictures__picture-box{
+    text-align: center;
+}
+body{
+    background-color: rgb(141, 190, 247);
+}
+.solid {
+    background-color: lightgrey;
+    width: 300px;
+    border: 15px solid rgb(11, 121, 29);
+    padding: 50px;
+    margin: auto;
+  }
+  .contact{
+      display: flex;
+      /* justify-content: flex-start; */
+      flex-direction: column;
+      text-align: left;  
+  }
 
 
 
