--- a/style.css
+++ b/style.css
@@ -62,7 +62,12 @@ body{
       display: flex;
       /* justify-content: flex-start; */
       flex-direction: column;
-      text-align: left;  
+      text-align: center;  
+  }
+  .social__media{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
   }
 
 
