--- a/style.css
+++ b/style.css
@@ -5,104 +5,73 @@
 }
 
 .header_title{
-    margin-top: 40px;
-    margin-bottom: 0px;
-    display: flex;
-    justify-content: center;
-   text-align: center;
+     font-size: 70px;
+     color:rgb(35, 35, 35);
 }
-.header_icons{
-    margin: 0;
-}
-
-.nav__icon{
-    margin: 50px;
-    margin-left: -10px;
-    margin-right: -10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    text-align: center;
+.nav__foot{
+    color: #f2f2f2 ;
 }
 
 .bio__header{
-    margin: 50px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.bio{
-    text-align: center;
-}
-
-.virtual_crab{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-}
-
-.hospital{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-}
-
-.pictures__picture-box{
-    text-align: center;
-}
-body{
-    background-image: url(./Pictures/space.jpg);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: 1500px;
+    color: rgb(35, 35, 35);
 }
 .solid {
-    background-color: lightgrey;
-    width: 300px;
-    border: 15px solid #333;
-    padding: 50px;
-    margin: auto;
+    background-color: rgba(211, 211, 211, 0.900);
+    border: 15px solid rgba(51, 51, 51, 0.900);
   }
-  .contact{
-      display: flex;
-      flex-direction: column;
-      text-align: center;  
+  .contact{  
+      color: rgb(35, 35, 35);
   }
   .social__media{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-  }
+      color: rgb(35, 35, 35);
+    }
+    .nav__icon {
+        background-color: rgba(51, 51, 51, 0.900);
+      }
+  
+      .nav__icon a {
+        color: #f2f2f2;
+      }
+  
+      .nav__icon a:hover {
+        background-color: #ddd;
+        color: rgba(0, 0, 0, 0.900);
+      }
+  
+      .nav__foot {
+        background-color: rgba(51, 51, 51, 0.900);
+      }
+  
+      .nav__foot a {
+        color: #f2f2f2;
+      }
+  
+      .nav__foot a:hover {
+        background-color: #ddd;
+        color: rgba(0, 0, 0, 0.900);
+      }
+    .nav__icon {
+        background-color: rgba(51, 51, 51, 0.900);
+    }
 
+    .nav__icon a {
+        color: #f2f2f2;
+    }
 
+    .nav__icon a:hover {
+        background-color: #ddd;
+        color: rgba(0, 0, 0, 0.900);
+    }
+    .nav__icon {
+        background-color: rgba(51, 51, 51, 0.900);
+        }
+    .nav__icon a {
+        color: #f2f2f2;
+      }
+      .nav__icon a:hover {
+        background-color: #ddd;
+        color: rgba(0, 0, 0, 0.900);
+      }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-:root { /* Notice we declare this with the same key, value pair. */
-    /* --primary-color: red;
-    --secondary-color: blue;
-    --tertiary-color: yellow;
-/* } */
-/* h1 { Declare variables the same way you would other values. */
-    /* background-color: var(--tertiary-color);
-    color: var(--primary-color);
-} */
+  
+    
