--- a/style.css
+++ b/style.css
@@ -5,73 +5,105 @@
 }
 
 .header_title{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
      font-size: 70px;
      color:rgb(35, 35, 35);
 }
+
 .nav__foot{
-    color: #f2f2f2 ;
+    color: #f2f2f2  ;
+    margin: 50px;
+    margin-left: -10px;
+    margin-right: -10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
 }
 
 .bio__header{
+    margin: 50px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 30px;
     color: rgb(35, 35, 35);
 }
 .solid {
     background-color: rgba(211, 211, 211, 0.900);
+    width: 300px;
     border: 15px solid rgba(51, 51, 51, 0.900);
+    padding: 50px;
+    margin: auto;
   }
-  .contact{  
+  .contact{
+      display: flex;
+      flex-direction: column;
+      text-align: center;  
       color: rgb(35, 35, 35);
   }
   .social__media{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
       color: rgb(35, 35, 35);
     }
     .nav__icon {
+        overflow: hidden;
         background-color: rgba(51, 51, 51, 0.900);
       }
   
       .nav__icon a {
+        float: left;
+        display: block;
         color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
       }
   
       .nav__icon a:hover {
         background-color: #ddd;
         color: rgba(0, 0, 0, 0.900);
       }
-  
+
       .nav__foot {
+        overflow: hidden;
         background-color: rgba(51, 51, 51, 0.900);
       }
-  
       .nav__foot a {
+        float: left;
+        display: block;
         color: #f2f2f2;
+        text-align: center;
+        padding: 10px 10px;
+        text-decoration: none;
       }
-  
       .nav__foot a:hover {
         background-color: #ddd;
         color: rgba(0, 0, 0, 0.900);
       }
     .nav__icon {
+        overflow: hidden;
         background-color: rgba(51, 51, 51, 0.900);
     }
-
     .nav__icon a {
+        float: left;
+        display: block;
         color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
     }
-
     .nav__icon a:hover {
         background-color: #ddd;
         color: rgba(0, 0, 0, 0.900);
     }
-    .nav__icon {
-        background-color: rgba(51, 51, 51, 0.900);
-        }
-    .nav__icon a {
-        color: #f2f2f2;
-      }
-      .nav__icon a:hover {
-        background-color: #ddd;
-        color: rgba(0, 0, 0, 0.900);
-      }
 
   
     
