--- a/layout.css
+++ b/layout.css
@@ -7,12 +7,12 @@
     margin: 0;
 }
 .nav__icon{
-    margin: 50px;
-    margin-left: -10px;
+    margin: 40px;
+    margin-left:-10px;
     margin-right: -10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     text-align: center;
 }
 body{
@@ -45,21 +45,13 @@ body{
     text-align: center;
 }
 .social__media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
    display: grid;
-   grid-template-columns: 250px 250px 250px;
-   grid-template-rows: 1000px;
-}
-.github{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 1;
-}
-.linkedin{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row: 1;
-}
-.gmail__tittle{
-    grid-column-start: 3;
-    grid-row: 1;
+   grid-area: auto;
+   grid-template-columns: 300px 300px 300px;
+   grid-template-rows: 300px;
+   
 }
