--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@
         color: rgba(0, 0, 0, 0.900);
       }
     .nav__icon {
+        padding: 0%;
+        padding-inline-start: 0px;
         overflow: hidden;
         background-color: rgba(51, 51, 51, 0.900);
     }
