--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
 .nav__foot{
     color: #f2f2f2  ;
     margin: 50px;
-    margin-left: -10px;
-    margin-right: -10px;
+    margin-left: 0px;
+    margin-right: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -40,6 +40,7 @@
     border: 15px solid rgba(51, 51, 51, 0.900);
     padding: 50px;
     margin: auto;
+    
   }
   .contact{
       display: flex;
@@ -59,12 +60,10 @@
       }
   
       .nav__icon a {
-        float: left;
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
+        font-size: 140%;
       }
   
       .nav__icon a:hover {
@@ -77,12 +76,11 @@
         background-color: rgba(51, 51, 51, 0.900);
       }
       .nav__foot a {
-        float: left;
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 10px 10px;
-        text-decoration: none;
+        font-size: 100%
+    ;
       }
       .nav__foot a:hover {
         background-color: #ddd;
