--- a/layout.css
+++ b/layout.css
@@ -32,16 +32,23 @@ body{
     text-align: center;
 }
 .virtual_crab{
+    font-size: 200%;
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-    text-decoration: none
+    text-decoration: none;
+    
 }
 #crab{
     text-decoration: none;
 }
 .hospital{
+    font-size: 200%;
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
