--- a/style.css
+++ b/style.css
@@ -34,12 +34,22 @@
     font-size: 30px;
     color: rgb(35, 35, 35);
 }
-.solid {
+.solidbio {
+    background-color: rgba(211, 211, 211, 0.900);
+    width: 500px;
+    border: 15px solid rgba(51, 51, 51, 0.900);
+    padding: 50px;
+    margin: auto;
+    font-size: 120%;
+    
+  }
+  .solidprojec {
     background-color: rgba(211, 211, 211, 0.900);
     width: 300px;
     border: 15px solid rgba(51, 51, 51, 0.900);
     padding: 50px;
     margin: auto;
+    font-size: 120%;
     
   }
   .contact{
