--- a/layout.css
+++ b/layout.css
@@ -9,73 +9,93 @@
     margin: 0;
     padding-inline-start: 0%;
 }
+
+#main-header{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 .nav__icon{
     padding:5px;
     display: grid;
+    grid-template-columns: 1000px;
+    grid-template-rows: 500px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    grid-template-columns: 1000px;
-    grid-template-rows: 500px;
     margin-left:0px;
     margin-right: 0px;
-  
 }
+
+.nav__icon a{
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    float: left;
+    display: block;
+}
+
 body{
     background-image: url(./Pictures/snow.jpg);
     background-repeat: repeat;
     background-attachment: scroll;
     background-size: 1900px;
 }
-.bio{
-    text-align: center;
-}
-.virtual_crab{
-    font-size: 200%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-    text-decoration: none;
-    
-}
-#crab{
-    text-decoration: none;
-}
-.hospital{
-    font-size: 200%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-    text-decoration: none;
-}#hospi{
-    text-decoration: none;
-}
-
-.pictures__picture-box{
- 
-    text-align: center;
-    text-decoration: none;    
-
-}
 .nav__foot {
     padding: 30px;
     text-align: center;
     margin-bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+    margin: 50px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
+
+.nav__foot a {
+    display: block;
+    text-align: center;
+}
+
+.bio__header{
+    margin: 50px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.bio{
+    text-align: center;
+}
+
+.solidbio {
+    width: 500px;
+    margin: auto;
+}
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 .social__media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     padding: 50px;
     margin: 50px;
-   display: grid;
-   grid-area: auto;
-   grid-template-columns: 300px 300px 300px;
-   grid-template-rows: 300px;
+    display: grid;
+    grid-area: auto;
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 300px;
 }
 .github{
     display: flex;
@@ -91,4 +111,61 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.pictures__picture-box{
+    padding: 25px;
+    margin: 25px;
+    text-align: center;
+    text-decoration: none;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    display: grid;   
+    grid-template-columns: 500px;
+    grid-template-rows: 50px 900px 50px 600px; 
+    grid-area: auto;    
+}
+
+.solidprojec{
+    padding: 50px;
+    margin: auto;
+    justify-content: center;
+}
+
+.virtual_crab{
+    grid-column: 1;
+    font-size: 200%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
+}
+
+#crab{
+    grid-row: 1;
+    grid-column: 1; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.hospital{
+    grid-row: 2;
+    grid-column: 1;
+    font-size: 200%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
+}
+
+#hospi{
+    grid-row: 2;
+    grid-column: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
