--- a/layout.css
+++ b/layout.css
@@ -115,7 +115,7 @@ body{
 
 .pictures__picture-box{
     padding: 25px;
-    margin: 25px;
+    margin: 50px;
     text-align: center;
     text-decoration: none;    
     display: flex;
@@ -123,7 +123,7 @@ body{
     justify-content: center;
     display: grid;   
     grid-template-columns: 500px;
-    grid-template-rows: 50px 900px 50px 600px; 
+    grid-template-rows: 50px 900px 50px 900px; 
     grid-area: auto;    
 }
 
@@ -152,6 +152,7 @@ body{
 }
 
 .hospital{
+    margin-top: 160px;
     grid-row: 2;
     grid-column: 1;
     font-size: 200%;
