--- a/layout.css
+++ b/layout.css
@@ -1,7 +1,3 @@
-.header_icons{
-    margin: 0;
-    padding-inline-start: 0%;
-}
 
 #main-header{
     margin-top: 15px;
@@ -18,8 +14,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left:0px;
-    margin-right: 0px;
 }
 
 .nav__icon a{
@@ -29,24 +23,11 @@
     display: block;
 }
 
-body{
-    background-image: url(./Pictures/snow.jpg);
-    background-repeat: repeat;
-    background-attachment: scroll;
-    background-size: 1900px;
-    margin: auto;
-}
 .nav__foot {
     margin-top: 100px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
     text-align: center;
-    margin-left: 0px;
-    margin-right: 0px;
-}
-
-.nav__foot a {
     display: block;
 }
 
@@ -75,19 +56,14 @@ body{
 }
 
 .social__media {
+    margin: 100px;
     flex-direction: row;
     justify-content: center;
-    padding: 50px;
-    margin: 50px;
     display: grid;
-    grid-area: auto;
-    grid-template-columns: 300px 300px 300px;
-    grid-template-rows: 150px;
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 50px;
-    text-decoration: none;
 }
 .github{
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -96,12 +72,8 @@ body{
     grid-row: 2;
    
 }
-#git{
-    text-decoration: none;
-}
 
 .linkedin{
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -109,12 +81,8 @@ body{
     grid-row: 2;
     grid-column: 2;
 }
-#link{
-    text-decoration: none;
-}
 
 .gmail{
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -123,23 +91,15 @@ body{
     grid-row: 2;
    
 } 
-#mail{
-    text-decoration: none;
-}
 
 .pictures__picture-box{
-    padding: 25px;
-    margin: 50px;
-    text-align: center;
-    text-decoration: none;    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin-top: 50px;
     display: grid;   
-    grid-template-columns: 500px;
-    grid-template-rows: 50px 900px 50px 900px; 
-    grid-area: auto;    
-}
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    text-align: center;
+    row-gap: 25px;
+    }
 
 .solidprojec{
     padding: 50px;
@@ -147,40 +107,16 @@ body{
     justify-content: center;
 }
 
-.virtual_crab{
-    grid-column: 1;
-    font-size: 200%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
-}
-
-#crab{
-    grid-row: 1;
-    grid-column: 1; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
-
 .hospital{
-    margin-top: 160px;
-    grid-row: 2;
-    grid-column: 1;
-    font-size: 200%;
-    display: flex;
+    font-size: 100%;
     justify-content: center;
     text-align: center;
+}
+h2{
+    margin: 10px;
+}
+h2 a{
     text-decoration: none;
+    color: black;
 }
 
-#hospi{
-    grid-row: 2;
-    grid-column: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
