--- a/style.css
+++ b/style.css
@@ -1,71 +1,55 @@
-*{
-  
-    font-family: Cambria, sans-serif;
+    *{
+        margin: 0;
+        font-family: Cambria, sans-serif;
+    }
+    body{
+        background-image: url("https://s3-us-west-2.amazonaws.com/dronephotos.soldbyair.com/drone-photo-columbus-oh.jpg");
+        background-size: cover;
+        }
 
-}
+    #main-header{
+        font-size: 50px;
+        color:rgb(35, 35, 35);
+    }
 
-#main-header{
-    font-size: 70px;
-    color:rgb(35, 35, 35);
-}
+    .nav__icon {
+        background-color: rgba(51, 51, 51, 0.993);
+    }
+        
+    .nav__icon a {
+        text-decoration: none;
+        color: #f2f2f2;
+        font-size: 120%;
+    }
+        
+    .nav__icon a:hover {
+        background-color: #ddd;
+        color: rgb(0, 0, 0);
+    }
 
-.nav__icon {
-    background-color: rgba(51, 51, 51, 0.900);
-}
-      
-.nav__icon a {
-    text-decoration: none;
-    color: #f2f2f2;
-    font-size: 140%;
-}
-      
-.nav__icon a:hover {
-    background-color: #ddd;
-    color: rgba(0, 0, 0, 0.900);
-}
+    .bio__header{
+        font-size: 30px;
+        color: rgb(35, 35, 35);
+    }
 
-.bio__header{
-    font-size: 30px;
-    color: rgb(35, 35, 35);
-}
+    .solidbio {
+        background-color: rgb(211, 211, 211);
+        border: 15px solid rgb(51, 51, 51);
+        padding: 50px;
+        font-size: 100%;
+    }
+    .social__username{
+        margin: 10px;
+    }
 
-.solidbio {
-    background-color: rgba(211, 211, 211, 0.900);
-    border: 15px solid rgba(51, 51, 51, 0.900);
-    padding: 50px;
-    font-size: 120%;
-}
+    .solidprojec {
+        background-color: rgb(211, 211, 211); width: 300px;
+        border: 15px solid rgb(51, 51, 51);
+    }
 
-.contact{  
-    color: rgb(35, 35, 35);
-}
-
-.solidprojec {
-    background-color: rgba(211, 211, 211, 0.900); width: 300px;
-    border: 15px solid rgba(51, 51, 51, 0.900);
-    font-size: 120%; 
-}
-
-.virtual_crab a:visited{
-    color:rgb(35, 35, 35);
-}
-
-
-.hospital a:visited{
-    color:rgb(35, 35, 35);
-}
-
-.nav__foot{
-    color: #f2f2f2  ;
-    background-color: rgba(51, 51, 51, 0.900);
-}
-
-.nav__foot a {
-    color: #f2f2f2;
-    font-size: 100%;
-}
-
-.nav__foot a:hover {
-    background-color: #ddd;
-    color: rgba(0, 0, 0, 0.900);
-}
+    .nav__foot{
+        font-size: 100%;
+        color: #f2f2f2;
+        background-color: rgb(51, 51, 51);
+        padding: 10px;
+    }
